Updated Portfolio placeholders

--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
           <li><a class="nav-link scrollto" href="index.html#hero-animated">Home</a></li>
           <li><a class="nav-link scrollto" href="index.html#about">About us</a></li>
           <li><a class="nav-link scrollto" href="index.html#onfocus">Services</a></li>
+          <li><a class="nav-link scrollto" href="index.html#features">Pricing</a></li>
           <li><a class="nav-link scrollto" href="index.html#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="index.html#contact">Contact us</a></li>
         </ul>
@@ -178,7 +179,7 @@
     <section id="features" class="features">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-          <!-- <h2>Our Pricing</h2> -->
+         <h2>Our Pricing</h2> 
           <!-- <p>Architecto nobis eos vel nam quidem vitae temporibus voluptates qui hic deserunt iusto omnis nam voluptas asperiores sequi tenetur dolores incidunt enim voluptatem magnam cumque fuga.</p> -->
         </div>
         <ul class="nav nav-tabs row gy-4 d-flex justify-content-center align-items-center">
@@ -223,7 +224,7 @@
                       <div class="pricing-item">
 
                         <div class="pricing-header">
-                          <h3>Free Plan</h3>
+                          <h3 style="color:#FFCA27">Free Plan</h3>
                           <h4><sup>$</sup>0<span> / month</span></h4>
                         </div>
 
@@ -235,18 +236,18 @@
                           <li class="na"><i class="bi bi-x"></i> <span>Massa ultricies mi quis hendrerit</span></li>
                         </ul>
 
-                        <div class="text-center mt-auto">
+                        <!-- <div class="text-center mt-auto">
                           <a href="#" class="buy-btn">Buy Now</a>
-                        </div>
+                        </div> -->
 
                       </div>
                     </div><!-- End Pricing Item -->
 
                     <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="400">
-                      <div class="pricing-item featured">
+                      <div class="pricing-item">
 
                         <div class="pricing-header">
-                          <h3>Business Plan</h3>
+                          <h3 style="color:#FFCA27">Business Plan</h3>
                           <h4><sup>$</sup>29<span> / month</span></h4>
                         </div>
 
@@ -260,9 +261,9 @@
                           <li><i class="bi bi-dot"></i> <span>Massa ultricies mi quis hendrerit</span></li>
                         </ul>
 
-                        <div class="text-center mt-auto">
+                        <!-- <div class="text-center mt-auto">
                           <a href="#" class="buy-btn">Buy Now</a>
-                        </div>
+                        </div> -->
 
                       </div>
                     </div><!-- End Pricing Item -->
@@ -271,7 +272,7 @@
                       <div class="pricing-item">
 
                         <div class="pricing-header">
-                          <h3>Developer Plan</h3>
+                          <h3 style="color:#FFCA27">Developer Plan</h3>
                           <h4><sup>$</sup>49<span> / month</span></h4>
                         </div>
 
@@ -282,10 +283,10 @@
                           <li><i class="bi bi-dot"></i> <span>Pharetra massa massa ultricies</span></li>
                           <li><i class="bi bi-dot"></i> <span>Massa ultricies mi quis hendrerit</span></li>
                         </ul>
-
+<!--
                         <div class="text-center mt-auto">
                           <a href="#" class="buy-btn">Buy Now</a>
-                        </div>
+                        </div> -->
 
                       </div>
                     </div><!-- End Pricing Item -->
@@ -299,77 +300,175 @@
 
           <div class="tab-pane" id="tab-2">
             <div class="row gy-4">
-              <div class="col-lg-8 order-2 order-lg-1">
-                <h3>Undaesenti</h3>
-                <p>
-                  Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                  culpa qui officia deserunt mollit anim id est laborum
-                </p>
-                <p class="fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua.
-                </p>
-                <ul>
-                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                  <li><i class="bi bi-check-circle-fill"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                  <li><i class="bi bi-check-circle-fill"></i> Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</li>
-                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-                </ul>
-              </div>
-              <div class="col-lg-4 order-1 order-lg-2 text-center">
-                <img src="assets/img/features-2.svg" alt="" class="img-fluid">
-              </div>
+              <section id="pricing" class="pricing">
+                <div class="container" data-aos="fade-up">
+
+
+
+                  <div class="row gy-4">
+
+                    <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
+                      <div class="pricing-item">
+
+                        <div class="pricing-header">
+                          <h3 style="color:#FFCA27">Free Plan</h3>
+                          <h4><sup>$</sup>0<span> / month</span></h4>
+                        </div>
+
+                        <ul>
+                          <li><i class="bi bi-dot"></i> <span>Quam adipiscing vitae proin</span></li>
+                          <li><i class="bi bi-dot"></i> <span>Nec feugiat nisl pretium</span></li>
+                          <li><i class="bi bi-dot"></i> <span>Nulla at volutpat diam uteera</span></li>
+                          <li class="na"><i class="bi bi-x"></i> <span>Pharetra massa massa ultricies</span></li>
+                          <li class="na"><i class="bi bi-x"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+                        </ul>
+
+                        <!-- <div class="text-center mt-auto">
+                          <a href="#" class="buy-btn">Buy Now</a>
+                        </div> -->
+
+                      </div>
+                    </div><!-- End Pricing Item -->
+
+                    <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="400">
+                      <div class="pricing-item">
+
+                        <div class="pricing-header">
+                          <h3 style="color:#FFCA27">Business Plan</h3>
+                          <h4><sup>$</sup>29<span> / month</span></h4>
+                        </div>
+
+                        <ul>
+                          <li><i class="bi bi-dot"></i> <span>Quam adipiscing vitae proin</span></li>
+                          <li><i class="bi bi-dot"></i> <span>Nec feugiat nisl pretium</span></li>
+                          <li><i class="bi bi-dot"></i> <span>Nulla at volutpat diam uteera</spa>
+                          </li>
+                          <li><i class="bi bi-dot"></i> <span>Pharetra massa massa ultricies</spa>
+                          </li>
+                          <li><i class="bi bi-dot"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+                        </ul>
+
+                        <!-- <div class="text-center mt-auto">
+                          <a href="#" class="buy-btn">Buy Now</a>
+                        </div> -->
+
+                      </div>
+                    </div><!-- End Pricing Item -->
+
+                    <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="600">
+                      <div class="pricing-item">
+
+                        <div class="pricing-header">
+                          <h3 style="color:#FFCA27">Developer Plan</h3>
+                          <h4><sup>$</sup>49<span> / month</span></h4>
+                        </div>
+
+                        <ul>
+                          <li><i class="bi bi-dot"></i> <span>Quam adipiscing vitae proin</span></li>
+                          <li><i class="bi bi-dot"></i> <span>Nec feugiat nisl pretium</span></li>
+                          <li><i class="bi bi-dot"></i> <span>Nulla at volutpat diam uteera</span></li>
+                          <li><i class="bi bi-dot"></i> <span>Pharetra massa massa ultricies</span></li>
+                          <li><i class="bi bi-dot"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+                        </ul>
+  <!--
+                        <div class="text-center mt-auto">
+                          <a href="#" class="buy-btn">Buy Now</a>
+                        </div> -->
+
+                      </div>
+                    </div><!-- End Pricing Item -->
+
+                  </div>
+
+                </div>
+              </section>
             </div>
           </div><!-- End Tab Content 2 -->
 
           <div class="tab-pane" id="tab-3">
             <div class="row gy-4">
-              <div class="col-lg-8 order-2 order-lg-1">
-                <h3>Pariatur</h3>
-                <p>
-                  Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                  culpa qui officia deserunt mollit anim id est laborum
-                </p>
-                <ul>
-                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                  <li><i class="bi bi-check-circle-fill"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                  <li><i class="bi bi-check-circle-fill"></i> Provident mollitia neque rerum asperiores dolores quos qui a. Ipsum neque dolor voluptate nisi sed.</li>
-                </ul>
-                <p class="fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua.
-                </p>
-              </div>
-              <div class="col-lg-4 order-1 order-lg-2 text-center">
-                <img src="assets/img/features-3.svg" alt="" class="img-fluid">
-              </div>
-            </div>
-          </div><!-- End Tab Content 3 -->
+              <section id="pricing" class="pricing">
+                <div class="container" data-aos="fade-up">
 
-          <div class="tab-pane" id="tab-4">
-            <div class="row gy-4">
-              <div class="col-lg-8 order-2 order-lg-1">
-                <h3>Nostrum</h3>
-                <p>
-                  Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-                  velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-                  culpa qui officia deserunt mollit anim id est laborum
-                </p>
-                <p class="fst-italic">
-                  Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-                  magna aliqua.
-                </p>
-                <ul>
-                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-                  <li><i class="bi bi-check-circle-fill"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-                  <li><i class="bi bi-check-circle-fill"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
-                </ul>
-              </div>
-              <div class="col-lg-4 order-1 order-lg-2 text-center">
-                <img src="assets/img/features-4.svg" alt="" class="img-fluid">
-              </div>
+
+
+                  <div class="row gy-4">
+
+                    <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="200">
+                      <div class="pricing-item">
+
+                        <div class="pricing-header">
+                          <h3 style="color:#FFCA27">Free Plan</h3>
+                          <h4><sup>$</sup>0<span> / month</span></h4>
+                        </div>
+
+                        <ul>
+                          <li><i class="bi bi-dot"></i> <span>Quam adipiscing vitae proin</span></li>
+                          <li><i class="bi bi-dot"></i> <span>Nec feugiat nisl pretium</span></li>
+                          <li><i class="bi bi-dot"></i> <span>Nulla at volutpat diam uteera</span></li>
+                          <li class="na"><i class="bi bi-x"></i> <span>Pharetra massa massa ultricies</span></li>
+                          <li class="na"><i class="bi bi-x"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+                        </ul>
+
+                        <!-- <div class="text-center mt-auto">
+                          <a href="#" class="buy-btn">Buy Now</a>
+                        </div> -->
+
+                      </div>
+                    </div><!-- End Pricing Item -->
+
+                    <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="400">
+                      <div class="pricing-item">
+
+                        <div class="pricing-header">
+                          <h3 style="color:#FFCA27">Business Plan</h3>
+                          <h4><sup>$</sup>29<span> / month</span></h4>
+                        </div>
+
+                        <ul>
+                          <li><i class="bi bi-dot"></i> <span>Quam adipiscing vitae proin</span></li>
+                          <li><i class="bi bi-dot"></i> <span>Nec feugiat nisl pretium</span></li>
+                          <li><i class="bi bi-dot"></i> <span>Nulla at volutpat diam uteera</spa>
+                          </li>
+                          <li><i class="bi bi-dot"></i> <span>Pharetra massa massa ultricies</spa>
+                          </li>
+                          <li><i class="bi bi-dot"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+                        </ul>
+
+                        <!-- <div class="text-center mt-auto">
+                          <a href="#" class="buy-btn">Buy Now</a>
+                        </div> -->
+
+                      </div>
+                    </div><!-- End Pricing Item -->
+
+                    <div class="col-lg-4" data-aos="zoom-in" data-aos-delay="600">
+                      <div class="pricing-item">
+
+                        <div class="pricing-header">
+                          <h3 style="color:#FFCA27">Developer Plan</h3>
+                          <h4><sup>$</sup>49<span> / month</span></h4>
+                        </div>
+
+                        <ul>
+                          <li><i class="bi bi-dot"></i> <span>Quam adipiscing vitae proin</span></li>
+                          <li><i class="bi bi-dot"></i> <span>Nec feugiat nisl pretium</span></li>
+                          <li><i class="bi bi-dot"></i> <span>Nulla at volutpat diam uteera</span></li>
+                          <li><i class="bi bi-dot"></i> <span>Pharetra massa massa ultricies</span></li>
+                          <li><i class="bi bi-dot"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+                        </ul>
+  <!--
+                        <div class="text-center mt-auto">
+                          <a href="#" class="buy-btn">Buy Now</a>
+                        </div> -->
+
+                      </div>
+                    </div><!-- End Pricing Item -->
+
+                  </div>
+
+                </div>
+              </section>
             </div>
           </div><!-- End Tab Content 4 -->
 
@@ -536,32 +635,7 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-product">
-              <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Product 3</h4>
-                <a href="assets/img/portfolio/product-3.jpg" title="Product 3" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-branding">
-              <img src="assets/img/portfolio/branding-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Branding 3</h4>
-                <a href="assets/img/portfolio/branding-3.jpg" title="Branding 2" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
-              <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Books 3</h4>
-                <a href="assets/img/portfolio/books-3.jpg" title="Branding 3" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
 
           </div><!-- End Portfolio Container -->
 
@@ -666,14 +740,14 @@
 
         <div class="d-flex flex-column align-items-center align-items-lg-start">
           <div class="copyright">
-            &copy; Copyright <strong><span>HeroBiz</span></strong>. All Rights Reserved
+            &copy; Copyright <strong><span>Crafters inc.</span></strong>. All Rights Reserved
           </div>
           <div class="credits">
             <!-- All the links in the footer should remain intact. -->
             <!-- You can delete the links only if you purchased the pro version. -->
             <!-- Licensing information: https://bootstrapmade.com/license/ -->
             <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/herobiz-bootstrap-business-template/ -->
-            Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+            <!-- Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a> -->
           </div>
         </div>
 
