Updated Icon for Title

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>HeroBiz Bootstrap Template - Home 1</title>
+  <title>Crafters Inc</title>
   <meta content="" name="description">
   <meta content="" name="keywords">
 
@@ -179,7 +179,7 @@
     <section id="features" class="features">
       <div class="container" data-aos="fade-up">
         <div class="section-header">
-         <h2>Our Pricing</h2> 
+         <h2>Our Pricing</h2>
           <!-- <p>Architecto nobis eos vel nam quidem vitae temporibus voluptates qui hic deserunt iusto omnis nam voluptas asperiores sequi tenetur dolores incidunt enim voluptatem magnam cumque fuga.</p> -->
         </div>
         <ul class="nav nav-tabs row gy-4 d-flex justify-content-center align-items-center">
