--- a/index.html
+++ b/index.html
@@ -109,15 +109,15 @@
                         brand and looking for some potential clients to further our reach.
                         We have 10+ years of hand-on expertise in Office 365, Adobe Suites, Google Slides, Keynote.
                   </p>
-                  <br><br>
+                  <!-- <br><br> -->
                   </div>
                   <p>At Crafters each of our craftsmen have their own perspective for
                     design and it’s not being saddled to any particular frames or patterns.
                   </p>
-                    <br><br>
+                    <!-- <br><br> -->
                   <p>Because! Creativity has no bounds and it has to be explored by every individual.
                   </p>
-                    <br><br>
+                    <!-- <br><br> -->
                   <p>Reach out to us with any kind of design needs and get it CRAFTED!!</p>
           </div>
           <!-- End Tab 1 Content -->
@@ -186,28 +186,50 @@
 
           <li class="nav-item col-6 col-md-4 col-lg-2">
             <a class="nav-link active show" data-bs-toggle="tab" data-bs-target="#tab-1">
-              <i class="bi bi-binoculars color-cyan"></i>
-              <h4>Graphic Design</h4>
+              <!-- <i class="bi bi-binoculars color-cyan"></i> -->
+              <h4>Presentation</h4>
             </a>
-          </li><!-- End Tab 1 Nav -->
+          </li>
+          <!-- End Tab 1 Nav -->
 
           <li class="nav-item col-6 col-md-4 col-lg-2">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-2">
-              <i class="bi bi-box-seam color-indigo"></i>
-              <h4>Logo</h4>
+              <!-- <i class="bi bi-box-seam color-indigo"></i> -->
+              <h4>Logo Design</h4>
             </a>
-          </li><!-- End Tab 2 Nav -->
+          </li>
+          <!-- End Tab 2 Nav -->
 
           <li class="nav-item col-6 col-md-4 col-lg-2">
             <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-3">
-              <i class="bi bi-brightness-high color-teal"></i>
-              <h4>Presentation</h4>
+              <!-- <i class="bi bi-brightness-high color-teal"></i> -->
+              <h4>Branding</h4>
             </a>
-          </li><!-- End Tab 3 Nav -->
+          </li>
+          <!-- End Tab 3 Nav -->
+
+          <li class="nav-item col-6 col-md-4 col-lg-2">
+            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-4">
+              <!-- <i class="bi bi-brightness-high color-teal"></i> -->
+              <h4>Illustration</h4>
+            </a>
+          </li>
+          <!-- End Tab 3 Nav -->
+
+          <li class="nav-item col-6 col-md-4 col-lg-2">
+            <a class="nav-link" data-bs-toggle="tab" data-bs-target="#tab-5">
+              <!-- <i class="bi bi-brightness-high color-teal"></i> -->
+              <h4>Motion Design</h4>
+            </a>
+          </li>
+          <!-- End Tab 3 Nav -->
 
 
 
         </ul>
+
+
+
 
         <div class="tab-content">
 
@@ -224,16 +246,19 @@
                       <div class="pricing-item">
 
                         <div class="pricing-header">
-                          <h3 style="color:#FFCA27">Free Plan</h3>
-                          <h4><sup>$</sup>0<span> / month</span></h4>
+                          <h3 style="color:#FFCA27">LITE</h3>
+                          <h4>3000 INR</h4>
+                          <!-- <h4><sup>$</sup>0<span> / month</span></h4> -->
                         </div>
 
                         <ul>
-                          <li><i class="bi bi-dot"></i> <span>Quam adipiscing vitae proin</span></li>
-                          <li><i class="bi bi-dot"></i> <span>Nec feugiat nisl pretium</span></li>
-                          <li><i class="bi bi-dot"></i> <span>Nulla at volutpat diam uteera</span></li>
-                          <li class="na"><i class="bi bi-x"></i> <span>Pharetra massa massa ultricies</span></li>
-                          <li class="na"><i class="bi bi-x"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+                          <li><i class="bi"></i> <span>Upto 15 Slides</span></li>
+                          <li><i class="bi"></i> <span>Standard Formatting</span></li>
+                          <li><i class="bi"></i> <span>N/A</span></li>
+                          <!-- <li class="na"><i class="bi bi-x"></i> <span>2 Days turnaround</span></li>
+                          <li class="na"><i class="bi bi-x"></i> <span>Outputs: PPT, PDF</span></li> -->
+                          <li><i class="bi"></i> <span>2 Days turnaround</span></li>
+                          <li><i class="bi"></i> <span>Outputs: PPT, PDF</span></li>
                         </ul>
 
                         <!-- <div class="text-center mt-auto">
@@ -247,18 +272,18 @@
                       <div class="pricing-item">
 
                         <div class="pricing-header">
-                          <h3 style="color:#FFCA27">Business Plan</h3>
-                          <h4><sup>$</sup>29<span> / month</span></h4>
+                          <h3 style="color:#FFCA27">PLUS</h3>
+                          <h4>6000 INR</h4>
+                          <!-- <h3 style="color:#FFCA27">Business Plan</h3>
+                          <h4><sup>$</sup>29<span> / month</span></h4> -->
                         </div>
 
                         <ul>
-                          <li><i class="bi bi-dot"></i> <span>Quam adipiscing vitae proin</span></li>
-                          <li><i class="bi bi-dot"></i> <span>Nec feugiat nisl pretium</span></li>
-                          <li><i class="bi bi-dot"></i> <span>Nulla at volutpat diam uteera</spa>
-                          </li>
-                          <li><i class="bi bi-dot"></i> <span>Pharetra massa massa ultricies</spa>
-                          </li>
-                          <li><i class="bi bi-dot"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+                          <li><i class="bi"></i> <span>Upto 25 Slides</span></li>
+                          <li><i class="bi"></i> <span>Standard Formatting and Visual Enhancement</span></li>
+                          <li><i class="bi"></i> <span>Includes Charts & Graphs</span></li>
+                          <li><i class="bi"></i> <span>4 Days turnaround</span></li>
+                          <li><i class="bi"></i> <span>Outputs: PPT, PDF, Illustration, Source file, Images</span></li>
                         </ul>
 
                         <!-- <div class="text-center mt-auto">
@@ -272,16 +297,18 @@
                       <div class="pricing-item">
 
                         <div class="pricing-header">
-                          <h3 style="color:#FFCA27">Developer Plan</h3>
-                          <h4><sup>$</sup>49<span> / month</span></h4>
+                          <h3 style="color:#FFCA27">PREMIUM</h3>
+                          <h4>20000 INR</h4>
+                          <!-- <h3 style="color:#FFCA27">Developer Plan</h3>
+                          <h4><sup>$</sup>49<span> / month</span></h4> -->
                         </div>
 
                         <ul>
-                          <li><i class="bi bi-dot"></i> <span>Quam adipiscing vitae proin</span></li>
-                          <li><i class="bi bi-dot"></i> <span>Nec feugiat nisl pretium</span></li>
-                          <li><i class="bi bi-dot"></i> <span>Nulla at volutpat diam uteera</span></li>
-                          <li><i class="bi bi-dot"></i> <span>Pharetra massa massa ultricies</span></li>
-                          <li><i class="bi bi-dot"></i> <span>Massa ultricies mi quis hendrerit</span></li>
+                          <li><i class="bi"></i> <span>Upto 35 Slides</span></li>
+                          <li><i class="bi"></i> <span>Standard Formatting,Visual Enhancement,Custom template</span></li>
+                          <li><i class="bi"></i> <span>Includes charts & graphs, Infographics , animations</span></li>
+                          <li><i class="bi"></i> <span>7 Days turnaround</span></li>
+                          <li><i class="bi"></i> <span>Outputs: PPT, PDF, Illustration, Source file, Images, Video</span></li>
                         </ul>
 <!--
                         <div class="text-center mt-auto">
@@ -536,7 +563,7 @@
 
         <div class="section-header">
           <h2>Portfolio</h2>
-          <p>Non hic nulla eum consequatur maxime ut vero memo vero totam officiis pariatur eos dolorum sed fug dolorem est possimus esse quae repudiandae. Dolorem id enim officiis sunt deserunt esse soluta consequatur quaerat</p>
+          <!-- <p>Non hic nulla eum consequatur maxime ut vero memo vero totam officiis pariatur eos dolorum sed fug dolorem est possimus esse quae repudiandae. Dolorem id enim officiis sunt deserunt esse soluta consequatur quaerat</p> -->
         </div>
 
       </div>
@@ -549,7 +576,7 @@
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-app">Graphic Design</li>
             <li data-filter=".filter-product">Logo</li>
-            <li data-filter=".filter-branding">Presentation</li>
+            <li data-filter=".filter-books">Presentation</li>
           </ul><!-- End Portfolio Filters -->
 
           <div class="row g-0 portfolio-container">
@@ -572,19 +599,10 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-branding">
-              <img src="assets/img/portfolio/branding-1.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Branding 1</h4>
-                <a href="assets/img/portfolio/branding-1.jpg" title="Branding 1" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
               <img src="assets/img/portfolio/books-1.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>Books 1</h4>
+                <h4>Branding 1</h4>
                 <a href="assets/img/portfolio/books-1.jpg" title="Branding 1" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
@@ -608,15 +626,6 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-branding">
-              <img src="assets/img/portfolio/branding-2.jpg" class="img-fluid" alt="">
-              <div class="portfolio-info">
-                <h4>Branding 2</h4>
-                <a href="assets/img/portfolio/branding-2.jpg" title="Branding 2" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
-              </div>
-            </div><!-- End Portfolio Item -->
-
             <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
               <img src="assets/img/portfolio/books-2.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
@@ -626,14 +635,78 @@
               </div>
             </div><!-- End Portfolio Item -->
 
-            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-app">
-              <img src="assets/img/portfolio/app-3.jpg" class="img-fluid" alt="">
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-product">
+              <img src="assets/img/portfolio/product-3.jpg" class="img-fluid" alt="">
               <div class="portfolio-info">
-                <h4>App 3</h4>
-                <a href="assets/img/portfolio/app-3.jpg" title="App 3" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <h4>Product 2</h4>
+                <a href="assets/img/portfolio/product-3.jpg" title="Product 2" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                 <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
               </div>
             </div><!-- End Portfolio Item -->
+
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
+              <img src="assets/img/portfolio/books-3.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Books 2</h4>
+                <a href="assets/img/portfolio/books-3.jpg" title="Branding 2" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-product">
+              <img src="assets/img/portfolio/product-4.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Product 2</h4>
+                <a href="assets/img/portfolio/product-4.jpg" title="Product 2" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
+              <img src="assets/img/portfolio/books-4.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Books 2</h4>
+                <a href="assets/img/portfolio/books-4.jpg" title="Branding 2" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
+              <img src="assets/img/portfolio/books-5.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Books 2</h4>
+                <a href="assets/img/portfolio/books-5.jpg" title="Branding 2" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
+              <img src="assets/img/portfolio/books-6.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Books 2</h4>
+                <a href="assets/img/portfolio/books-6.jpg" title="Branding 2" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
+              <img src="assets/img/portfolio/books-7.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Books 2</h4>
+                <a href="assets/img/portfolio/books-7.jpg" title="Branding 2" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
+            <div class="col-xl-3 col-lg-4 col-md-6 portfolio-item filter-books">
+              <img src="assets/img/portfolio/books-8.jpg" class="img-fluid" alt="">
+              <div class="portfolio-info">
+                <h4>Books 2</h4>
+                <a href="assets/img/portfolio/books-8.jpg" title="Branding 2" data-gallery="portfolio-gallery" class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                <a href="portfolio-details.html" title="More Details" class="details-link"><i class="bi bi-link-45deg"></i></a>
+              </div>
+            </div><!-- End Portfolio Item -->
+
 
 
 
