--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
   <title>Crafters Inc</title>
-  <meta content="We are Crafters. We craft your needs" name="description">
+  <meta content="Creative design start-up based out of Chennai." name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
