--- a/index.html
+++ b/index.html
@@ -833,7 +833,7 @@
               <div class="info-item d-flex" style="justify-content:center">
                 <!-- <p class="bi bi-geo-alt flex-shrink-0" style="text-align:center"> <b>Location</b> : Chennai </p> <p style ="inline">  |  </p> <p class="bi bi-envelope flex-shrink-0" style="inline"> <b> Email </b> : <a href="mailto:team_crafters@outlook.com, janedoe@fakeemail.com?cc=jackdoe@fakeemail.com &bcc=jennydoe@fakeemail.com &subject=this is how to use the mailto link">team_crafters@outlook.com</a> </p> -->
 
-                <p class="bi bi-geo-alt flex-shrink-0" style="text-align:center"> <b>Location</b> : Chennai </p> <p style ="inline"> &nbsp; | &nbsp;  </p> <p class="bi bi-envelope flex-shrink-0" style="inline"> <b> Email </b> : <a href="mailto:team_crafters@outlook.com &subject=Project Enquiry">team_crafters@outlook.com</a> </p>
+                <p class="bi bi-geo-alt flex-shrink-0" style="text-align:center"> <b>Location</b> : Chennai </p> <p style ="inline"> &nbsp; | &nbsp;  </p> <p class="bi bi-envelope flex-shrink-0" style="inline"> <b> Email </b> : <a href="mailto:team_crafters@outlook.com?&subject=Project Enquiry">team_crafters@outlook.com</a> </p>
                 <!-- <div>
                   <h4>Location:Chennai</h4>
                   <p>Chennai</p>
