Removed Pricing from Nav menu

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           <li><a class="nav-link scrollto" href="index.html#hero-animated">Home</a></li>
           <li><a class="nav-link scrollto" href="index.html#about">About us</a></li>
           <li><a class="nav-link scrollto" href="index.html#onfocus">Services</a></li>
-          <li><a class="nav-link scrollto" href="index.html#features">Pricing</a></li>
+         <!-- <li><a class="nav-link scrollto" href="index.html#features">Pricing</a></li>-->
           <li><a class="nav-link scrollto" href="index.html#portfolio">Portfolio</a></li>
           <li><a class="nav-link scrollto" href="index.html#contact">Contact us</a></li>
 
